--- a/application/frontend/pages/Home.html
+++ b/application/frontend/pages/Home.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meeting Room</title>
-    <link rel="stylesheet" href="HomeStyles.css">
+    <link rel="stylesheet" href="./../assets/css/HomeStyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=New+Amsterdam&family=Oswald:wght@200..700&family=Raleway:wght@100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <script src="../assets/js/home.js"></script>
 
 </head>
 
@@ -32,10 +34,10 @@
             <p>Effective communication in large offices can be complex.<br> Booking space for meetings or
                 <span class="yellow-highlight">private<br>
                 calls should be seamless and straightforward.</span></p>
-                    <button href="#" class="btn">Login</button>
+                    <button href="#" class="btn" id="loginBtn" onclick="handleReroute()">Login</button>
         </div>
         <div class="image-content">
-            <img src="Room.jpg" alt="Meeting Room">
+            <img src="../assets/jpg/Room.jpg" alt="Meeting Room">
         </div>
     </div>
 
