--- a/application/frontend/pages/login.html
+++ b/application/frontend/pages/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./../assets/css/LoginStyles.css">
 </head>
 <body>
 
@@ -48,6 +48,6 @@
             <button type="submit" class="login-button">Login</button>
         </form>
     </div>
-    <script src="scripts.js"></script>
+    <script src="../assets/js/login.js"></script>
 </body>
 </html>
