--- a/application/frontend/pages/admin.html
+++ b/application/frontend/pages/admin.html
@@ -9,6 +9,8 @@
     <title>Haven Hive - Admin</title>
     <!-- Link to the external stylesheet for custom styles -->
     <link rel="stylesheet" href="./../assets/css/admin.css">
+    <link rel="stylesheet" href="./../assets/css/navbar.css">
+    <link rel="stylesheet" href="./../assets/css/footer.css">
     <!-- Preconnect to Google Fonts for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,7 +63,7 @@
         <div class="func-box">
             <i class="fa-solid fa-building func-icon"></i> <!-- Font Awesome icon -->
             <h4>
-                <a href="create-meeting.html" class="stretched-link">Create<br> Meeting Room</a>
+                <a href="create-room.html" class="stretched-link">Create<br> Meeting Room</a>
             </h4>
         </div>
         <!-- Box for managing meeting rooms -->
