--- a/application/frontend/pages/manager.html
+++ b/application/frontend/pages/manager.html
@@ -9,6 +9,8 @@
     <title>Haven Hive - Manager</title>
     <!-- Link to the external stylesheet for custom styles -->
     <link rel="stylesheet" href="./../assets/css/manager.css">
+    <link rel="stylesheet" href="./../assets/css/navbar.css">
+    <link rel="stylesheet" href="./../assets/css/footer.css">
     <!-- Preconnect to Google Fonts for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +53,7 @@
         <!-- Image content area with background image -->
         <div class="image-content">
             <!-- Placeholder image with alt text -->
-            <img src="../assets/jpg/Employee.png" alt="Loading Image">
+            <img src="../assets/jpg/employee.png" alt="Loading Image">
         </div>
     </div>
 
