--- a/application/frontend/pages/member.html
+++ b/application/frontend/pages/member.html
@@ -9,6 +9,8 @@
     <title>Member Dashboard</title>
     <!-- Link to the external stylesheet for custom styles -->
     <link rel="stylesheet" href="./../assets/css/member.css">
+    <link rel="stylesheet" href="./../assets/css/navbar.css">
+    <link rel="stylesheet" href="./../assets/css/footer.css">
     <!-- Preconnect to Google Fonts for faster loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
