--- a/application/frontend/pages/home.html
+++ b/application/frontend/pages/home.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haven Hive - Home</title>
     <link rel="stylesheet" href="./../assets/css/home.css"> <!-- Link to internal stylesheet -->
+    <link rel="stylesheet" href="./../assets/css/navbar.css">
+    <link rel="stylesheet" href="./../assets/css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Preconnect for font loading -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Preconnect for font loading -->
     <link
