--- a/application/frontend/pages/organize-meeting.html
+++ b/application/frontend/pages/organize-meeting.html
@@ -11,6 +11,9 @@
             rel="stylesheet"> <!-- Link to Google Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Link to Font Awesome -->
     <link rel="stylesheet" href="../assets/css/organize-meeting.css">
+    <link rel="stylesheet" href="../assets/css/login.css">
+    <link rel="stylesheet" href="./../assets/css/footer.css">
+    <link rel="stylesheet" href="./../assets/css/navbar.css">
 </head>
 <body>
 <nav class="navbar">
